--- a/css/sass/enhanced.scss
+++ b/css/sass/enhanced.scss
@@ -44,6 +44,7 @@ File Notes:
 \*-------------------------*/
 
 @import "objects/headerfooter"; // Header and Footer Styling
+@import "objects/background-images"; // Header and Footer Styling
 
 
 
