--- a/css/sass/variables/_variables.scss
+++ b/css/sass/variables/_variables.scss
@@ -44,10 +44,9 @@ $base-size: $primary-size $secondary-size;
   #Colors
 \*-------------------------*/
 
-$color1: #000; //Black
-$color2: #fff;  //White
-$color3: #745050;  //Pale Red
-$color4: #afafaf;  //Gray
+$color1: #3f3f3f; //Black
+$color2: #f5f5f5;  //Off White
+$color3: red;
 
 
 
