--- a/css/sass/objects/_headerfooter.scss
+++ b/css/sass/objects/_headerfooter.scss
@@ -7,8 +7,7 @@ File Name: Header and Footer
 File Purpose: Classes for the header and footer elements
 
 File Notes: 
-  - The header is designed to be a hamburger menu for the mobile view
-	- The footer is kept simple by default
+
 
 *********/
 
@@ -19,8 +18,7 @@ File Notes:
 
 .header{
 	text-align: center;
-	background: $color1;
-	color: $color2;
+	color: $color1;
 	@include trailer;
 	padding: 1em;
 	overflow: hidden;
@@ -28,7 +26,9 @@ File Notes:
 
 //Site Title
 .siteTitle_logo{
-	margin: 0;
+	margin: 1em auto .5em;
+	width:80%;
+
 }
 
 
@@ -39,42 +39,18 @@ File Notes:
   #Navigation
 \*-------------------------*/
 
-.siteNav_list{
-	list-style: none;
-	padding: 0;
-	margin: 0;
-	max-height: 0px;
-  	overflow: hidden;
-	@include transition(.5s);
 
-  	&.active{
-  		max-height: 999px;
-  	}
-}
+	.siteNav{
+		font-size: .8em;
+		letter-spacing: .1em;
+		text-align: center;
+		text-transform: uppercase;
 
-.siteNav_item{
-	padding: 0.5em 0;
-}
-
-.siteNav_link{ 
-	color: $color2;
-	padding: 1em 0;
-
-	&:hover{
-		color: $color3;
+		li{
+			list-style: none;
+			margin-bottom: 1em;
+		}
 	}
-}
-
-.siteNav_button{
-	color: $color1;
-	background: $color2;
-	width: 100%;
-	margin: 10px 0 0;
-	padding: 10px 0;
-	display: block;
-}
-
-
 
 
 
